cloudtools/cloudformation/ec2.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Web server config

Parameters:
  EnvironmentName:
    Description: An environment name that is prefixed to resource names
    Type: String
  KeyName:
    Description: Amazon EC2 KeyPair
    Type: String
  PublicSubnet1:
    Description: The subnet that the web server will be hosted in
    Type: String
  VPC:
    Description: VPC that contains the web server
    Type: String


Mappings:
  RegionMap:
    us-east-1:
      AMI: ami-1853ac65
    us-west-1:
      AMI: ami-bf5540df
    eu-west-1:
      AMI: ami-3bfab942
    ap-southeast-1:
      AMI: ami-e2adf99e
    ap-southeast-2:
      AMI: ami-43874721
    ap-south-1:
      AMI: ami-0ebc1ac48dfd14136

Resources:
  WebServerEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      UserData:
        !Base64 |
        #!/bin/bash
        yum -y update
        yum -y groupinstall "Develoment tools" 
        yum -y install docker
        git clone https://github.com/COSC481W-2021Winter/capstone-project-film-club.git
        cd capstone-project-film-club
        docker-compose up --build
      InstanceType: t2.micro
      ImageId:
        Fn::FindInMap:
          - RegionMap
          - !Ref AWS::Region
          - AMI
      Tags:
        - Key: Name
          Value: "Film Club Host"
      KeyName: !Ref KeyName
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: "0"
          GroupSet:
            - Ref: "SecurityGroup"
          SubnetId:
            Ref: "PublicSubnet1"

  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Open Port 22 for ssh and port 8080 for http
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
